--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ init:
   - ps: $env:Path+=";C:\msys64\usr\bin"
 
 before_build:
-  - ps: git submodule update
+  - ps: git submodule update --init --recursive
 
 build_script:
   - ps: bash -c "./build.sh $env:platform"
