--- a/FFmpegWin.props
+++ b/FFmpegWin.props
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
+        <FFMpegWinArch>$(Platform)</FFMpegWinArch>
         <FFMpegWinArch Condition="'$(Platform)' == 'Win32'">x86</FFMpegWinArch>
-        <FFMpegWinArch Condition="'$(Platform)' != 'Win32'">$(Platform)</FFMpegWinArch>
+        <FFMpegWinArch Condition="'$(Platform)' == 'ARM'">arm</FFMpegWinArch>
+        <FFMpegWinArch Condition="'$(Platform)' == 'ARM64'">arm64</FFMpegWinArch>
     </PropertyGroup>
 
     <ItemDefinitionGroup>
@@ -19,6 +21,12 @@
             <AdditionalLibraryDirectories>$(MSBuildThisFileDirectory)native\libs\uwp-$(FFMpegWinArch)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
         </Link>
     </ItemDefinitionGroup>
+    <ItemGroup Condition="'$(TargetPlatformIdentifier)' == 'UAP'">
+        <CopyFileToFolders Include="$(MSBuildThisFileDirectory)native\dlls\uwp-$(FFMpegWinArch)\*.dll">
+            <DeploymentContent>true</DeploymentContent>
+            <FileType>Document</FileType>
+        </CopyFileToFolders>
+    </ItemGroup>
 
     <ItemDefinitionGroup Condition="'$(TargetPlatformIdentifier)' != 'UAP'">
         <Link>
