--- a/package.nuspec
+++ b/package.nuspec
@@ -12,13 +12,13 @@
   </metadata>  
 
   <files>
-    <file src="*.props" target="build" />
-    <file src="Build\desktop-x64\include\**" target="build\native\include" />
+    <file src="*.props" target="build\native" />
+    <file src="Build\desktop-x64\include\**" target="include" />
 
-    <file src="Build\uwp-x86\bin\*.lib" target="build\native\libs\uwp-x86" />
-    <file src="Build\uwp-x86\bin\*.dll" target="build\native\dlls\uwp-x86" />
+    <file src="Build\uwp-x86\bin\*.lib" target="link\win10-x86-aot" />
+    <file src="Build\uwp-x86\bin\*.dll" target="runtimes\win10-x86-aot\native" />
 
-    <file src="Build\desktop-x64\bin\*.lib" target="build\native\libs\desktop-x64" />
-    <file src="Build\desktop-x64\bin\*.dll" target="build\native\dlls\desktop-x64" />
+    <file src="Build\desktop-x64\bin\*.lib" target="link\win10-x64" />
+    <file src="Build\desktop-x64\bin\*.dll" target="runtimes\win10-x64\native" />
   </files>
 </package>
