--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ before_build:
   - ps: git submodule update -q --init --recursive
 
 build_script:
-  - ps: bash -c "./build.sh $env:platform"
+  - bash -c "./build.sh $env:platform"
 
 after_build:
   - ps: Compress-Archive -Path ".\Build\$platform\*" -DestinationPath ".\ffmpeg_$platform.zip"
