--- a/package.nuspec
+++ b/package.nuspec
@@ -19,8 +19,16 @@
     <file src="Build\uwp-x64\bin\*.dll" target="runtimes\win10-x64-aot\native" />
     <file src="Build\uwp-x86\bin\*.lib" target="link\win10-x86-aot" />
     <file src="Build\uwp-x86\bin\*.dll" target="runtimes\win10-x86-aot\native" />
-    
+    <file src="Build\uwp-arm64\bin\*.lib" target="link\win10-arm64-aot" />
+    <file src="Build\uwp-arm64\bin\*.dll" target="runtimes\win10-arm64-aot\native" />
+    <file src="Build\uwp-arm\bin\*.lib" target="link\win10-arm-aot" />
+    <file src="Build\uwp-arm\bin\*.dll" target="runtimes\win10-arm-aot\native" />
+
     <file src="Build\desktop-x64\bin\*.lib" target="link\win10-x64" />
     <file src="Build\desktop-x64\bin\*.dll" target="runtimes\win10-x64\native" />
+    <file src="Build\desktop-x86\bin\*.lib" target="link\win10-x86" />
+    <file src="Build\desktop-x86\bin\*.dll" target="runtimes\win10-x86\native" />
+    <file src="Build\desktop-arm64\bin\*.lib" target="link\win10-arm64" />
+    <file src="Build\desktop-arm64\bin\*.dll" target="runtimes\win10-arm64\native" />
   </files>
 </package>
